--- a/css/donation.css
+++ b/css/donation.css
@@ -19,6 +19,8 @@
 	margin-bottom: 1px !important;
 	font-family: Helvetica !important;
     font-size: 12px !important;
+    padding: 1px 6px !important;
+    font-style: normal !important;
 }
 
 #donation-box label {
@@ -43,12 +45,13 @@
 }
 
 .donation-input {
-	background-color: transparent !important;
-	border: 1px solid #858585 !important;
-	padding-top: 1px !important;
-	padding-bottom: 1px !important;
-	margin-bottom: 10px !important;
-	width: 133px;
+	background-color: rgba(0, 0, 0, 0)!important;
+    border: 1px solid #858585!important;
+    padding-top: 1px!important;
+    padding-bottom: 1px!important;
+    margin-bottom: 4px!important;
+    width: 133px !important;
+    height: 16px !important;
 }
 
 #donation-box .donation-hidden {    
@@ -127,4 +130,6 @@
 	width: 70% !important;
 	padding-left: 20% !important;
 	padding-top: 2% !important;
+	vertical-align: middle !important;
+	height: unset !important;
 }
