--- a/css/donation.css
+++ b/css/donation.css
@@ -18,8 +18,8 @@
 	font-weight: bold !important;
 	margin-bottom: 1px !important;
 	font-family: Helvetica !important;
-    font-size: 12px !important;
-    padding: 3px 6px !important;
+    font-size: 12px;
+    padding: 3px 6px;
     font-style: normal !important;
 }
 
@@ -149,4 +149,8 @@
 	    width: 118px !important;
 	}
 
+	#donation-box button {
+	    font-size: 11px !important;
+	    padding: 1px 6px !important;
+	}
 }
