--- a/rpp/css/joinnus-rpp.css
+++ b/rpp/css/joinnus-rpp.css
@@ -23,19 +23,22 @@
 		position: relative;
 	}
 	.jn-events>article {
-		padding: 0px 10px 0px 10px;
+		padding: 6px 10px 0px 10px;
 	}
 	.jn-events>article>a>img {
 		width: 100%;
     	border-radius: 5px;
 	}
 	.jn-events>article>a>.title {
+		font-weight: bold;
 		font-family: arial;
-		position: relative;
-		left: 20px;
+		position: absolute;
+		bottom: -5px;
 		color: #fff;
 		font-size: 14px;
-		position: absolute;
+		background-color: rgba(0, 0, 0, 0.65);;
+		padding: 10px 10px 10px 10px;
+		width: 91%;
 	}
 	.joinnusSearch {
 		width: 100%;
@@ -68,3 +71,22 @@
 		border: solid 1px #707070;
 		box-shadow: 0 0 5px 1px #969696;
 	}
+
+	.jn-buy {
+		background-color: #e83924;
+	    padding: 10px 15px 10px 15px;
+	    cursor: pointer;
+	    color: #fff;
+	    font-weight: bold;
+	    margin: 0 auto;
+	    border: none;
+	    border-radius: 3px;
+	    text-transform: uppercase;
+	}
+
+
+@media(max-width: 320px) {
+	.jn-events>article>a>.title {
+	    width: 86%;
+	}
+}
