--- a/rpp/css/joinnus-rpp.css
+++ b/rpp/css/joinnus-rpp.css
@@ -2,7 +2,7 @@
 		height: auto;
 		max-width: 450px;
 		min-width: 250px;
-		
+		border: 1px solid #ddd;
 	}
 	#rppJoinnusWidget>.rppJoinnusHeader>img {
 		width: 100px;
@@ -11,6 +11,7 @@
 	.rppJoinnusHeader {
 		background-color: #000;
 		padding: 10px;
+		text-align: center;
 	}
 
 	.rppJoinnusHeader>span {
