--- a/rpp/css/joinnus-rpp.css
+++ b/rpp/css/joinnus-rpp.css
@@ -2,13 +2,17 @@
 		height: auto;
 		max-width: 450px;
 		min-width: 250px;
-		border: 1px solid #ddd;
+		border: 1px solid rgba(25, 25, 25, 0.72);;
+		border-top-right-radius: 10px;
+    	border-top-left-radius: 10px;
 	}
 	#rppJoinnusWidget>.rppJoinnusHeader>img {
 		width: 220px;
 	}
 
 	.rppJoinnusHeader {
+		border-top-right-radius: 10px;
+    	border-top-left-radius: 10px;
 		background-color: #191919;
 		padding: 10px;
 		text-align: center;
