--- a/rpp/css/joinnus-rpp.css
+++ b/rpp/css/joinnus-rpp.css
@@ -43,7 +43,7 @@
 		bottom: -10px;
 		color: #fff;
 		font-size: 14px;
-		background-color: rgba(0, 0, 0, 0.65);;
+		background-color: rgba(0, 0, 0, 0.8);
 		padding: 10px 10px 10px 10px;
 		width: 96%;
 	}
@@ -81,7 +81,7 @@
 
 	.jn-buy {
 		background-color: #e83924;
-	    padding: 10px 15px 10px 15px;
+	    padding: 5px 15px 5px 15px;
 	    cursor: pointer;
 	    color: #fff;
 	    font-weight: bold;
